# model-library

./: README.md  deepsparse.yaml  dynamic_api.py  image_cache.yaml  llamacpp.yaml  model_library_deployment.yaml  pyproject.toml
api/: api.py
benchmark/: prompts.py
dockerfiles/vllm_cuda_118/: Dockerfile
model_library/: __init__.py  api.py  api_wrapper.py  benchmark_apis.py  client.py  library.py  models.py  utils.py
model_library/cards/: architectures.py  deployments.py  model_deployment_templates.py  models.py
model_library/kubernetes_configs/: deepsparse_deployment.yaml  kalavai_rag_deployment.yaml  llama_cpp_python.yaml  local_ai_cpu.yaml  rag_chat_ui_deployment.yaml  tool_library_deployment.yaml
model_library/kubernetes_configs/raw/: local-ai-ingres.yaml  local-ai.yaml  model_library_deployment.yaml  petals-backend.yaml  service.yaml  vllm-openai_deployment.yaml
notebooks/: RAG Deployment In Code.ipynb  RAG Deployment.ipynb  RAG UI  Deployment.ipynb  benchmark.ipynb  benchmark.yaml  compiled.yaml  model_library copy.ipynb  model_library.ipynb  rag_deployment_example.yaml  rag_ui_deployment_example.yaml  tool_library.ipynb  tool_library_compiled.yaml
scripts/: test.py  test_deepspeed_call.py  test_deploy.py
ui/: streamlit.py
